# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  ruff.toml
.github/workflows/: workflow.yml
staticfiles/admin/js/: SelectFilter2.js  prepopulate.js
task_manager/: .env  filters.py  models.py  rollbar.py  settings.py  urls.py  views.py  wsgi.py
task_manager/migrations/: 0001_initial.py  0002_tasks.py  0003_alter_labels_name_alter_status_name_alter_tasks_name.py
task_manager/tests/: test_auth.py  test_filter.py  test_label.py  test_status.py  test_task.py
templates/: index.html
templates/auth/: confirm_delete.html  login.html  registrations.html  update_user.html  users.html
templates/label/: create_label.html  delete_label.html  labels.html  update_label.html
templates/status/: create_status.html  delete_status.html  statuses.html  update_status.html
templates/task/: create_task.html  delete_task.html  task_detail.html  tasks.html  update_task.html
